--- a/style.css
+++ b/style.css
@@ -7,29 +7,62 @@ body{
 @media only screen and (min-width: 375px){
 
 nav{
-    background-color:hsl(193, 100%, 96%);
-    position: sticky;
+    padding: 50px;
+    position: static;
     top:0;
     display: flex;
     justify-content:space-between;
     align-items:center;
 }
 
-.Hero{
-    display:flex;
-    flex-direction:column;
+.backg_img{
     background-image: url('./images/bg-hero-mobile.svg');
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size:container;
     background-color: hsl(193, 100%, 96%);
 }
+
+.nav_button{
+    font-weight: bolder;
+    
+    border-radius: 25px;
+    background: white;
+    padding: 20px;
+    width: 200px;
+    height:50px;
+    border: none;
+}
+
+.Hero{
+    display:flex;
+    flex-direction:column; 
+    
+}
+
 .Hero_box-1{
+    height: 300px;
+    width: 500px;
+    margin: 100px;
+    font-family: "poppins";
+}
+.Hero_box-1>h1>span{
 
-
-    
-    
+    display:flex;
+    font-family: "poppins"; 
+    flex-direction: column;
+        
 }   
 .Hero_box-2{
+    height: 300px;
+    width: 500px;
+    margin: 100px;
+    font-family: "poppins"; 
+
+}
+.Hero_box-2>h1>span{
+
+    display:flex;
+    flex-direction: column;
     
 }
 .Hero_img{
@@ -39,6 +72,7 @@ nav{
 
 .hero_button{
     
+    color: white;
     border-radius: 25px;
     background: hsl(322, 100%, 66%);
     padding: 20px;
@@ -46,19 +80,76 @@ nav{
     height:50px;
     border:none;
 }
+.boxes-container{
+ margin:7rem 5rem;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
 }
+.box{
+    display:flex;
+    flex-direction:row;
+    margin:1REM auto;
+    box-shadow: 0 2px 4px 0 rgba(117, 117, 117, 0.2), 0 3px 10px 0 rgba(224, 223, 223, 0.19);
+    border-radius: 10px;
+    justify-content: center;
+}
+.box img{
+    flex-grow: 1;
+    width: 10%;
+    margin:3rem 1rem;
+}
+.texto{
+    width: 30%;
+    margin: 5rem;
+    flex-grow: 1;
+    font-family: "poppins"; 
+    flex-direction: column;
+}
+footer{
+    display: flex;
+    flex-direction: row;
+    background-color:  hsl(192, 100%, 9%);
+    height: 20rem;
+}
+.second-column{
+    display: flex;
+    flex-direction: column;
+}
+.last-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    background-color:#fff;
+    z-index: 3;
+    padding: 2rem 3rem;
+    width: fit-content;
+    box-shadow: 0 2px 4px 0 rgba(117, 117, 117, 0.2), 0 3px 10px 0 rgba(224, 223, 223, 0.19);
+
+}
+.last-box h2{
+    font-family: "poppins"; 
+    text-align:center;
+}
+.last-box button{
+    width: fit-content;
+    margin: 0 auto;
+    border:none;
+    color:#FFF;
+    background-color: hsl(322, 100%, 66%);
+    padding: 1rem 4rem;
+    border-radius: 25px;
+}
+}
+
 
 @media only screen and (min-width: 1024px){
 
     .Hero{
         
         display:flex;
-
         flex-direction:row;
-        background-image: url('./images/bg-hero-desktop.svg');
-        background-repeat: no-repeat;
-        background-size:cover;
-        background-color: hsl(193, 100%, 96%);
     }
     .nav_button{
         border-radius: 15px;
