--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@ body{
 @media  screen and (min-width: 360px){
 
 nav{
-    padding: 50px;
+    padding: 10px;
     position: static;
     top:0;
     display: flex;
+    align-items: space-between;
 }
 
 .backg_img{
@@ -22,12 +23,13 @@ nav{
 }
 
 .nav_logo{
-    margin: 2rem;
+    margin: 2rem 0;
     width: 10rem;
 }
 
 .nav_button{
-    position: absolute; right: 10px;
+    position: absolute; 
+    right: 100px;
     font-weight: bolder;
     background: white;
     border-radius: 50px;
@@ -37,10 +39,15 @@ nav{
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     padding: 12px;
     font-family: "poppins";
+    cursor: pointer;
 
 }
 
-
+.Hero_img{ 
+    width: 100%;
+    height: auto;
+    
+}
 
 .Hero{
     display:flex;
@@ -50,34 +57,33 @@ nav{
 
 .Hero_box-1{
     height: 300px;
-    width: 500px;
-    margin: 100px;
+    width: 90%;
+    margin: 50px 15px;
     font-family: "poppins";
+}
+.Hero_box-1 p{
+    text-align:center;
 }
 .Hero_box-1>h1>span{
 
     display:flex;
     font-family: "poppins"; 
     flex-direction: column;
+    justify-content: center;
+    text-align:center;
         
 }   
 .Hero_box-2{
     height: 300px;
-    width: 500px;
-    margin: 100px;
+    width: 90%;
+    margin: 50px 15px;
     font-family: "poppins";
 
 }
 .Hero_box-2>h1>span{
 
     display:flex;
-    flex-direction: column;
-    
-    
-}
-.Hero_img{ 
-    max-width: 90%;
-    height: auto;
+    flex-direction: column;   
 }
 
 .hero_button{
@@ -90,46 +96,51 @@ nav{
     height:50px;
     border:none;
     font-family: "poppins";
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    margin:1rem auto;
     
 }
 .boxes-container{
-    margin:7rem 5rem;
+    margin:7rem 1rem;
     display: flex;  
     flex-direction: column;
     
+    
 }
 .box{
+    
     display:flex;
     align-items: center;
     flex-flow: column-reverse;
-    margin:1REM auto;
+    margin:1REM 0;
     box-shadow: 0 2px 4px 0 rgba(117, 117, 117, 0.2), 0 3px 10px 0 rgba(224, 223, 223, 0.19);
     border-radius: 10px;
     justify-content: center;
 }
 .box-flowing{
+    
     display:flex;
     align-items: center;
     flex-flow: column;
-    margin:1REM auto;
+    margin:1REM 0;
     box-shadow: 0 2px 4px 0 rgba(117, 117, 117, 0.2), 0 3px 10px 0 rgba(224, 223, 223, 0.19);
     border-radius: 10px;
     justify-content: center;
 }
 .box img,.box-flowing img{
     flex-grow: 1;
-    width: 80%;
+    width: 60%;
     margin:3rem 5rem 2rem 5rem;
     justify-content: center;
 }
 
 
 .texto{
-    
     width: 80%;
-   
     margin-bottom: 2rem;
-    padding: 1rem;
+    padding: 0rem;
     flex-grow: 2;
     font-family: "poppins"; 
     flex-direction: column;
@@ -141,9 +152,10 @@ nav{
     color: hsl(208, 11%, 55%);
 }
 footer{ 
+    
     display: flex;
     flex-direction: column;
-    background-color:  rgb(196, 124, 218);
+    background-color:  hsl(192, 100%, 9%);
     height: 100%;
     width: 100%;
     padding:10rem 0 .5rem .5rem;
@@ -181,22 +193,32 @@ footer{
     justify-content: center;
     text-align: left;
     display: flex;
-    width: 25%;
+    width: auto;
     flex-direction: column;
     color:White;
-    margin:4rem 0 2.5rem 10rem;
+    margin:0rem 1rem;
+    padding: 0;
+}
+.second-column p{
+    font-size:2rem;
+}
+.third-column {
+    font-size:2rem;
+    
 }
 .third-column{
     display: flex;
-    width: 25%;
+    width: auto;
     flex-direction: column;
     color:White;
-    margin:5rem 2.5rem;
+    margin:1rem 1rem;
 }
 
 .fourth-column{
     display: flex;
-    width: 25%;
+    justify-content: center;
+    margin: 1rem auto; 
+    width: auto;
     flex-direction: row;
     color:White;
 }
@@ -207,35 +229,41 @@ footer{
 
 .first-column{
     display: flex;
-    width: 25%;
+    width: auto;
     flex-direction: column;
     color:White;
 }
 .logo{
- width: 70%;
-}
+    width: 50%;
+    margin:2rem 1rem;
+   }
 .divider{
     display:flex;
     flex-direction: row;
+    width: 80%;
+}
+.divider p{
+    font-size:2rem;
+    margin-left: 2rem;
 }
 .icon{
     display:flex;
     justify-content: center;
     align-items:center;
-    margin:1.5rem 1rem;
-    width:10%;
+    margin:4rem 1rem;
+    width:15%;
     height: 25%;
 }
 .icon-phone{
-    margin:1.5rem 1rem;
-    width:5%;
-    height: 25%;
+    margin:3rem 1rem;
+    width:7%;
+    height: 100%;
 }
-.second-column{
-    display: flex;
-    flex-direction: column;
-}
+
 .last-box{
+    border-radius: 15px ;
+    position: relative;
+    top:5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -260,6 +288,7 @@ footer{
     padding: 1rem 4rem;
     border-radius: 25px;
     font-family: "poppins";
+    cursor: pointer;
 }
 
 }
@@ -275,25 +304,62 @@ footer{
         background-size:container;
         background-color: hsl(193, 100%, 96%);
     }
-    .Hero{
-        
-        display:flex;
-        flex-direction:row;
-        
+
+    .Hero_img{ 
+        width: 100%;
+        height: auto;
     }
 
+    
+    .Hero{  
+        display:flex;
+        flex-direction:row;  
+    }
+    .Hero_box-1{
+        height: 300px;
+        width: 90%;
+        margin: 100px ;
+        font-family: "poppins";
+    }
+    .Hero_box-1 p{
+        text-align:left;
+    }
+    .Hero_box-1>h1>span{
+        display:flex;
+        font-family: "poppins"; 
+        flex-direction: column;
+        justify-content: center;
+        text-align:left;
+            
+    } 
+    .hero_button{
+    
+        color: white;
+        border-radius: 25px;
+        background: hsl(322, 100%, 66%);
+        padding: 20px;
+        width: 200px;
+        height:50px;
+        border:none;
+        font-family: "poppins";
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        margin:1rem 0;
+        
+    }
     .boxes-container{
         margin:7rem 5rem;
         display: flex;
         flex-direction: column;
        
-        
-       }
+    }
+
     .box{
         
         display:grid;
         grid-template-columns: auto auto;
-           
+        width: auto;
            margin:1REM auto;
            box-shadow: 0 2px 4px 0 rgba(117, 117, 117, 0.2), 0 3px 10px 0 rgba(224, 223, 223, 0.19);
            border-radius: 10px;
@@ -302,7 +368,7 @@ footer{
     .box-flowing{
         display:grid;
         grid-template-columns: auto auto;
-        
+        width: auto;
         margin:1REM auto;
         padding: 2rem;
         box-shadow: 0 2px 4px 0 rgba(117, 117, 117, 0.2), 0 3px 10px 0 rgba(224, 223, 223, 0.19);
@@ -337,9 +403,10 @@ footer{
     }
     
     footer{ 
+        
         display: flex;
         flex-direction: row;
-        background-color:  hsl(208, 11%, 55%);
+        background-color:  hsl(192, 100%, 9%);
         height: 100%;
         width:100%;
         padding:10rem 0 5rem 5rem;
@@ -353,9 +420,13 @@ footer{
         flex-direction: column;
         color:white;
     }
+    .first-column p{
+        font-size:1.1rem;
+    }
     .logo{
-     width: 70%;
+     width: 50%;
      margin:1.5rem 0;
+    
     }
     .divider{
         display:flex;
@@ -371,7 +442,7 @@ footer{
     }
     .icon-phone{
         margin:1.2rem 1rem;
-        width:5%;
+        width:10%;
         height: 25%;
     }
     .second-column{
@@ -381,28 +452,36 @@ footer{
         width: 25%;
         flex-direction: column;
         color:White;
-        margin:4rem 0 2.5rem 7rem;
+        margin:0rem 0 1.5rem 1rem;
+    }
+    .second-column p{
+        font-size: 1.8rem;
     }
     .third-column{
         display: flex;
-        width: 25%;
+        width: 15%;
         flex-direction: column;
         color:White;
-        margin:5rem .5rem;
+        margin:5rem auto;
+    }
+    .third-column p{
+        font-size: 1.8rem; 
     }
     
     .fourth-column{
         display: flex;
-        width: 25%;
+       width: 30%;
         flex-direction: row;
         color:red;
     }
     .fourth-column img{
-        width:10%;
+        width:12%;
         
-        margin:0 1rem;
+        margin:0 0.5rem;
     }
     .last-box{
+        position: relative;
+        top:5rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -427,6 +506,7 @@ footer{
         padding: 1rem 4rem;
         border-radius: 25px;
         font-family: "poppins";
+       
     }
     
     
